--- a/ins-moniter/ins-moniter-admin/pom.xml
+++ b/ins-moniter/ins-moniter-admin/pom.xml
@@ -13,12 +13,44 @@
     <groupId>com.haili.ins.moniter</groupId>
     <artifactId>ins-moniter-admin</artifactId>
     <packaging>jar</packaging>
-
+    <properties>
+        <spring-boot-admin.version>1.5.7</spring-boot-admin.version>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>com.haili.ins.common</groupId>
             <artifactId>ins-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>de.codecentric</groupId>
+            <artifactId>spring-boot-admin-server</artifactId>
+            <version>${spring-boot-admin.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>de.codecentric</groupId>
+            <artifactId>spring-boot-admin-server-ui</artifactId>
+            <version>${spring-boot-admin.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>de.codecentric</groupId>
+            <artifactId>spring-boot-admin-server-ui-login</artifactId>
+            <version>${spring-boot-admin.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>de.codecentric</groupId>
+            <artifactId>spring-boot-admin-server-ui-hystrix</artifactId>
+            <version>${spring-boot-admin.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>de.codecentric</groupId>
+            <artifactId>spring-boot-admin-server-ui-turbine</artifactId>
+            <version>${spring-boot-admin.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-turbine-stream</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
