--- a/ins-gateway/api-gateway/src/main/resources/application.yml
+++ b/ins-gateway/api-gateway/src/main/resources/application.yml
@@ -2,6 +2,10 @@ logging.config: classpath:log4j2.xml
 ## org.springframework.boot.autoconfigure.web.ServerProperties
 server:
   port: 9101
+  servlet:
+    session:
+      cookie:
+        name: OAUTH2SESSION # This is to prevent cookie clash with other service as they run on the same host and context path
 
 management:
   endpoint:
@@ -18,7 +22,7 @@ spring:
       charset: utf-8
       force: true
       enabled: true
-
+  main.allow-bean-definition-overriding: true
   haili:
     web:
       swagger2:
@@ -111,6 +115,8 @@ auth:
     -
       pattern: /auth/oauth/**
     -
+      pattern: /auth/auth/user
+    -
       pattern: /**/public/**
     -
       pattern: /actuator/**
@@ -123,7 +129,10 @@ security:
       client-id: frontend
       client-secret: frontend
     resource:
-      user-info-uri: http://localhost:${server.port}/auth/user
-      token-info-uri: http://localhost:${server.port}/auth/oauth/check_token
+      prefer-token-info: false
+      user-info-uri: http://localhost:8999/auth/user
+      load-balanced: true
+#      token-info-uri: http://localhost:${server.port}/auth/oauth/check_token
+#      token-type: Bearer
 #      jwt:
 #        key-value: secret #使用对称加密方式，默认算法为HS256
