--- a/ins-service/ins-member-service/ins-member/member-facade/src/main/resources/application.yml
+++ b/ins-service/ins-member-service/ins-member/member-facade/src/main/resources/application.yml
@@ -10,7 +10,7 @@ pagehelper:
   params: count=countSql
 
 mybatis:
-  type-aliases-package: com.haili.ins.model
+  type-aliases-package: com.haili.ins.dao.model
   mapper-locations: classpath*:/mybatis/*.xml
 
 ##tk.mybatis
@@ -66,9 +66,9 @@ spring:
   # 当前服务名
   application.name: member-server
   datasource:
-    url: jdbc:mysql://localhost:3306/member?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
+    url: jdbc:mysql://47.100.3.157:3306/member?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
     userName: root
-    password: 111111
+    password: 123456
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
